--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -37,6 +38,7 @@
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "spin-wheel": "^5.0.2",
     "tailwind-merge": "^2.2.2",
     "use-sound": "^4.0.1",
